Added hero section

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <link rel="stylesheet" type="text/css" href="memory.css">
-      <title></title>
+      <link rel="stylesheet" type="text/css" href="css/style.css">
+      <link rel="stylesheet" type="text/css" href="css/hero.css">
+      <title>East London</title>
    </head>
    <body>
+      <div class="hero">
+        <div class="title-container">
+          <h1 class="hero-header">East London Gin</h1>
+          <p class="hero-sub">Gin made in the heart of England</p>
+        </div>
+      </div><!-- /HERO -->
    </body>
 </html>
