--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
       <meta charset="utf-8">
       <link rel="stylesheet" type="text/css" href="css/style.css">
       <link rel="stylesheet" type="text/css" href="css/hero.css">
+      <link href='https://fonts.googleapis.com/css?family=Kumar One Outline' rel='stylesheet'>
+      <link href='https://fonts.googleapis.com/css?family=Kumar One' rel='stylesheet'>
+      <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
       <title>East London</title>
    </head>
    <body>
       <div class="hero">
-        <div class="title-container">
-          <h1 class="hero-header">East London Gin</h1>
-          <p class="hero-sub">Gin made in the heart of England</p>
-        </div>
+         <div class="title-container">
+           <h1 class="hero-header">East London Gin</h1>
+           <p class="hero-sub">Gin made in the heart of England</p>
+         </div>
       </div><!-- /HERO -->
    </body>
 </html>
