Changed class names and added logo in hero section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
    </head>
    <body>
       <div class="hero">
-         <div class="title-container">
+         <div class="hero-container">
+           <img class="logo" src="images/fron_logo_linen.png"></img>
            <h1 class="hero-header">East London Gin</h1>
            <p class="hero-sub">Gin made in the heart of England</p>
          </div>
