--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
          <div class="page-divider">
             <h2>About our gin</h2>
          </div>
-         <div class="content-block">
-            <div></div>
-            <div>
+         <div class="content-block ingredients">
+            <div class="image-container"></div>
+            <div class="text-container">
                <h4>Ingredients</h4>
                <p>Batch 1 is once again made with 100% British wheat spirits and features a botanical selection of juniper berries, cassia bark, coriander seeds, angelica root, pink grapefruit peel, cubeb berries and Darjeeling tea.</p>
             </div>
          </div>
-         <div class="content-block">
-            <div>
+         <div class="content-block destillation">
+            <div class="text-container">
                <h4>Destillation</h4>
                <p>Our aim is to produce spirits that are accessible in flavour and price, while being of the highest quality of production. In our custom-designed and hand-built Arnold Holstein copper stills, we produce our amazing premium gin.                  </p>
             </div>
-            <div></div>
+            <div class="image-container"></div>
          </div>
-         <div class="content-block">
-            <div></div>
-            <div>
+         <div class="content-block packaging">
+            <div class="image-container"></div>
+            <div class="text-container">
                <h4>Packaging</h4>
                <p>Our bottles are made of the finest quality glass in an old  factory 20 miles north of London.  The labels are made of recycled high qualiity paper and  the bottle is closed with  a genuine  cork cap.</p>
             </div>
@@ -48,7 +48,7 @@
                <h2>Featured recipies</h2>
             </div>
             <div class="content-block">
-               <div>
+               <div class="text-container">
                   <h2>Gin & Tonic</h2>
                   <ul>
                      <li>6cl gin</li>
@@ -62,11 +62,11 @@
                      <li>Put a lemonslice on top.</li>
                   </ol>
                </div>
-               <div></div>
+               <div class="image-container"></div>
             </div>
             <div class="content-block">
-               <div></div>
-               <div>
+               <div class="image-container"></div>
+               <div class="text-container">
                   <h2>Bramble</h2>
                   <ul> 
                         <li>4cl Gin</li>
@@ -85,7 +85,7 @@
                </div>
             </div>
             <div class="content-block">
-               <div>
+               <div class="text-container">
                   <h2>Watermelon Fizz</h2>
                   <ul>
                         <li>2 slices of watermelon</li>
@@ -100,17 +100,17 @@
                         <li>Pour into glass, top with sodawater and decorate with watermelon slices and lime.</li>
                      </ol>
                </div>
-               <div></div>
+               <div class="image-container"></div>
          </div> <!-- Recipies-section end-->
          <div class="about-us">
                   <div class="page-divider">
                      <h2>About us</h2>
                   </div>
                   <div class="content-block">
-                     <div></div>
-                     <div></div>
-                     <div></div>
-                     <div>
+                     <div class="image-container"></div>
+                     <div class="image-container"></div>
+                     <div class="image-container"></div>
+                     <div class="text-container">
                         <p>Located in the same factory for 150 years we lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dolor nibh, porta vel lobortis nec, consectetur eget massa. Maecenas at fringilla justo. Aliqae augue maximus, placerat justo vel, accumsan tortor. Nunc ex libero, luctus et erat quis, viverra interdum ligula.</p>
                      </div>
                   </div>
