--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                <p>Our bottles are made of the finest quality glass in an old  factory 20 miles north of London.  The labels are made of recycled high qualiity paper and  the bottle is closed with  a genuine  cork cap.</p>
             </div>
          </div>
+         <div class="page-divider recipies">
+            <h2>Featured recipies</h2>
+         </div>
       </div> <!-- About our gin-section end-->
       <div class="recipies">
-            <div class="page-divider">
-               <h2>Featured recipies</h2>
-            </div>
-            <div class="content-block">
+            <div class="content-block gin-tonic">
                <div class="text-container">
                   <h2>Gin & Tonic</h2>
                   <ul>
@@ -64,7 +64,7 @@
                </div>
                <div class="image-container"></div>
             </div>
-            <div class="content-block">
+            <div class="content-block bramble">
                <div class="image-container"></div>
                <div class="text-container">
                   <h2>Bramble</h2>
@@ -84,7 +84,7 @@
                      </ol>
                </div>
             </div>
-            <div class="content-block">
+            <div class="content-block watermelon-fizz">
                <div class="text-container">
                   <h2>Watermelon Fizz</h2>
                   <ul>
