minor changes to grid

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <title>East London</title>
    </head>
    <body>
+      <div class="main-grid">
       <div class="hero">
          <div class="hero-container">
            <img class="logo" src="images/fron_logo_linen.png"></img>
@@ -130,5 +131,6 @@
       <footer>
 
       </footer>
+   </div>
    </body>
 </html>
