Importet new css in head

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
       <meta charset="utf-8">
       <link rel="stylesheet" type="text/css" href="css/style.css">
       <link rel="stylesheet" type="text/css" href="css/hero.css">
+      <link rel="stylesheet" type="text/css" href="css/ourgin.css">
+      <link rel="stylesheet" type="text/css" href="css/recipies.css">
+      <link rel="stylesheet" type="text/css" href="css/aboutus.css">
+      <link rel="stylesheet" type="text/css" href="css/newsletter.css">
       <link href='https://fonts.googleapis.com/css?family=Kumar One Outline' rel='stylesheet'>
       <link href='https://fonts.googleapis.com/css?family=Kumar One' rel='stylesheet'>
       <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
