Made workaround for responsivity in header

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" type="text/css" href="css/style.css">
       <link rel="stylesheet" type="text/css" href="css/hero.css">
       <link rel="stylesheet" type="text/css" href="css/ourgin.css">
@@ -15,6 +16,7 @@
    </head>
    <body>
       <div class="hero">
+         <img class="mobilelogo" src="images/fron_logo_linen.png"></img>
          <div class="hero-container">
            <img class="logo" src="images/fron_logo_linen.png"></img>
            <h1 class="hero-header">East London Gin</h1>
