moved main-grid

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <title>East London</title>
    </head>
    <body>
+      <div class="EVERYTHING">
       <div class="hero">
          <img class="mobilelogo" src="images/fron_logo_linen.png"></img>
          <div class="hero-container">
@@ -113,9 +114,11 @@
                      <h2>About us</h2>
                   </div>
                   <div class="content-block">
-                     <div class="image-container"></div>
-                     <div class="image-container"></div>
-                     <div class="image-container"></div>
+                     <div class="image-wrapper">
+                     <div class="image-container destillery"></div>
+                     <div class="image-container building"></div>
+                     <div class="image-container storage"></div>
+                  </div>
                      <div class="text-container">
                         <p>Located in the same factory for 150 years we lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dolor nibh, porta vel lobortis nec, consectetur eget massa. Maecenas at fringilla justo. Aliqae augue maximus, placerat justo vel, accumsan tortor. Nunc ex libero, luctus et erat quis, viverra interdum ligula.</p>
                      </div>
@@ -136,5 +139,6 @@
       <footer>
 
       </footer>
+   </div>
    </body>
 </html>
