--- a/index.html
+++ b/index.html
@@ -100,14 +100,15 @@
                         <li>6cl gin</li>
                         <li>ice</li>
                         <li>sodawater</li>
-                     </ul>
-                     <ol>
+                  </ul>
+                  <ol>
                         <li>Put lots of ice in a highballglass.</li>
                         <li>Mix watermelon and shake with gin, limejuice and ice.</li>
                         <li>Pour into glass, top with sodawater and decorate with watermelon slices and lime.</li>
-                     </ol>
+                  </ol>
                </div>
                <div class="image-container"></div>
+            </div>
          </div> <!-- Recipies-section end-->
          <div class="about-us">
                   <div class="page-divider">
@@ -119,10 +120,10 @@
                      <div class="image-container building"></div>
                      <div class="image-container storage"></div>
                   </div>
-                     <div class="text-container">
-                        <p>Located in the same factory for 150 years we lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dolor nibh, porta vel lobortis nec, consectetur eget massa. Maecenas at fringilla justo. Aliqae augue maximus, placerat justo vel, accumsan tortor. Nunc ex libero, luctus et erat quis, viverra interdum ligula.</p>
-                     </div>
+                  <div class="text-container">
+                     <p>Located in the same factory for 150 years we lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dolor nibh, porta vel lobortis nec, consectetur eget massa. Maecenas at fringilla justo. Aliqae augue maximus, placerat justo vel, accumsan tortor. Nunc ex libero, luctus et erat quis, viverra interdum ligula.</p>
                   </div>
+         </div>
          </div> <!-- About us-section end-->
          <div class="newsletter">
                <div class="page-divider">
@@ -131,11 +132,11 @@
                <div class="content-block">
                   <h3>We promise we won’t spam you!</h3>
                   <form action="">
-                  <input type="text">
-                  <button>Subscribe</button>
-               </form>
+                     <input type="text" placeholder="YOUR EMAIL ADRESS HERE">
+                     <button>Subscribe</button>
+                  </form>
                </div>
-      </div> <!-- Newsletter-section end-->
+         </div> <!-- Newsletter-section end-->
       <footer>
 
       </footer>
