--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2>About our gin</h2>
          </div>
          <div class="content-block ingredients">
-            <div class="image-container"></div>
+            <div class="filter"><div class="image-container"></div></div>
             <div class="text-container">
                <h4>Ingredients</h4>
                <p>Batch 1 is once again made with 100% British wheat spirits and features a botanical selection of juniper berries, cassia bark, coriander seeds, angelica root, pink grapefruit peel, cubeb berries and Darjeeling tea.</p>
@@ -41,10 +41,10 @@
                <h4>Destillation</h4>
                <p>Our aim is to produce spirits that are accessible in flavour and price, while being of the highest quality of production. In our custom-designed and hand-built Arnold Holstein copper stills, we produce our amazing premium gin.                  </p>
             </div>
-            <div class="image-container"></div>
+            <div class="filter"><div class="image-container"></div></div>
          </div>
          <div class="content-block packaging">
-            <div class="image-container"></div>
+               <div class="filter"><div class="image-container"></div></div>
             <div class="text-container">
                <h4>Packaging</h4>
                <p>Our bottles are made of the finest quality glass in an old  factory 20 miles north of London.  The labels are made of recycled high qualiity paper and  the bottle is closed with  a genuine  cork cap.</p>
@@ -70,10 +70,10 @@
                      <li>Put a lemonslice on top.</li>
                   </ol>
                </div>
-               <div class="image-container"></div>
+               <div class="filter"><div class="image-container"></div></div>
             </div>
             <div class="content-block bramble">
-               <div class="image-container"></div>
+                  <div class="filter"><div class="image-container"></div></div>
                <div class="text-container">
                   <h2>Bramble</h2>
                   <ul> 
@@ -108,7 +108,7 @@
                         <li>Pour into glass, top with sodawater and decorate with watermelon slices and lime.</li>
                   </ol>
                </div>
-               <div class="image-container"></div>
+               <div class="filter"><div class="image-container"></div></div>
             </div>
          </div> <!-- Recipies-section end-->
          <div class="about-us">
@@ -117,9 +117,9 @@
                   </div>
                   <div class="content-block">
                      <div class="image-wrapper">
-                     <div class="image-container destillery"></div>
-                     <div class="image-container building"></div>
-                     <div class="image-container storage"></div>
+                           <div class="filter"><div class="image-container destillery"></div></div>
+                           <div class="filter"><div class="image-container building"></div></div>
+                           <div class="filter"><div class="image-container storage"></div></div>
                   </div>
                   <div class="text-container">
                      <p>Located in the same factory for 150 years we lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dolor nibh, porta vel lobortis nec, consectetur eget massa. Maecenas at fringilla justo. Aliqae augue maximus, placerat justo vel, accumsan tortor. Nunc ex libero, luctus et erat quis, viverra interdum ligula.</p>
