more minor changes

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                      <li>ice</li>
                   </ul>
                   <ol>
-                     <li>Put lots of ice in a highballglass.</li>
-                     <li>Fill up with gin and tonic.</li>
-                     <li>Put a lemonslice on top.</li>
+                     <li>1. Put lots of ice in a highballglass.</li>
+                     <li>2. Fill up with gin and tonic.</li>
+                     <li>3. Put a lemonslice on top.</li>
                   </ol>
                </div>
                <div class="filter"><div class="image-container"></div></div>
@@ -85,10 +85,10 @@
                         <li>Blackberries</li>
                      </ul>
                      <ol>
-                        <li>Put lots of ice in a glass.</li>
-                        <li>Shake gin, lemonjuice, simple syrup and ice.</li>
-                        <li>Pour into the glass and drip creme de mûre directly in the glass.</li>
-                        <li>Garnish with fresh blackberries.</li>
+                        <li>1. Put lots of ice in a glass.</li>
+                        <li>2. Shake gin, lemonjuice, simple syrup and ice.</li>
+                        <li>3. Pour into the glass and drip creme de mûre directly in the glass.</li>
+                        <li>4. Garnish with fresh blackberries.</li>
                      </ol>
                </div>
             </div>
@@ -103,9 +103,9 @@
                         <li>sodawater</li>
                   </ul>
                   <ol>
-                        <li>Put lots of ice in a highballglass.</li>
-                        <li>Mix watermelon and shake with gin, limejuice and ice.</li>
-                        <li>Pour into glass, top with sodawater and decorate with watermelon slices and lime.</li>
+                        <li>1. Put lots of ice in a highballglass.</li>
+                        <li>2. Mix watermelon and shake with gin, limejuice and ice.</li>
+                        <li>3. Pour into glass, top with sodawater and decorate with watermelon slices and lime.</li>
                   </ol>
                </div>
                <div class="filter"><div class="image-container"></div></div>
