Dunno what I did..

--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
                   <h2>Sign up to our newsletter</h2>
                </div>
                <div class="content-block">
-                  <h3>We promise we won’t spam you!</h3>
+                  <h5 class="spam">WE PROMISE WE WON'T SPAM YOU!</h5>
                   <form action="">
                      <input type="text" placeholder="YOUR EMAIL ADRESS HERE">
-                     <button>Subscribe</button>
+                     <button>SUBSCRIBE</button>
                   </form>
                </div>
          </div> <!-- Newsletter-section end-->
@@ -159,25 +159,26 @@
                <div class="adress">
                   <h4>Contact us</h4>
                   <p>Adress:</br>
-                     221b Baker Street
-                     London
-                     NW1 6XE
+                     221b Baker Street</br>
+                     London</br>
+                     NW1 6XE</br>
                      Great Britain</p>
                   </p>
-                  <p class="info">
+               </div>
+               <div class="info">
                   <p>Email:</br>
                   info@eastlondon.com</p>
                   <p>Phone:</br>
                   020 1234 5678</p>
                </div>
-               <div class="badges">
-                  <img class="socbadge" src="images/icons/facebook.png"></img>
-                  <img class="socbadge" src="images/icons/instagram.png"></img>
-                  <img class="socbadge" src="images/icons/twitter.png"></img>
-               </div>
             </div>
-            <div class="map"></div>
+            <div class="badges">
+               <img class="socbadge" src="images/icons/facebook.png"></img>
+               <img class="socbadge" src="images/icons/instagram.png"></img>
+               <img class="socbadge" src="images/icons/twitter.png"></img>
+            </div>
          </div>
+         <div class="map"></div>
       </footer>
    </div>
    </body>
